# Glucometer_Monitoring_IoT

./: .gitignore  CMakeLists.txt  EPD_Test.h  OLED_1in3_C_test.cpp  README.md  main.c  main.cpp
ble/: CMakeLists.txt  temp_sensor.h
examples/: CMakeLists.txt  Menu.cpp  Menu.hpp  OLED_1in3_C_test.c
